Almost done: SPI, Relay optocouplers, ADC & DAC interface However, bug needs to be fixed: buses are not connected between hierarchical sheets

--- a/microxplorer/loranc_rcvr_lqfp100.ioc
+++ b/microxplorer/loranc_rcvr_lqfp100.ioc
@@ -1,20 +1,19 @@
 #MicroXplorer Configuration settings - do not modify
-#Sat Jan 18 17:41:06 EET 2014
+#Mon Jan 20 19:45:05 EET 2014
 File.Version=1
 KeepUserPlacement=true
 Mcu.Family=STM32F4
 Mcu.IP0=ADC2
 Mcu.IP1=DAC
-Mcu.IP10=USART2
 Mcu.IP2=ETH_RMII
-Mcu.IP3=SPI2
-Mcu.IP4=SPI3
-Mcu.IP5=SYS
-Mcu.IP6=TIM3
-Mcu.IP7=TIM10
-Mcu.IP8=TIM11
-Mcu.IP9=USART1
-Mcu.IPNb=11
+Mcu.IP3=SPI3
+Mcu.IP4=SYS
+Mcu.IP5=TIM3
+Mcu.IP6=TIM10
+Mcu.IP7=TIM11
+Mcu.IP8=USART1
+Mcu.IP9=USART2
+Mcu.IPNb=10
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
@@ -34,40 +33,41 @@ Mcu.Pin20=PB10
 Mcu.Pin21=PB11
 Mcu.Pin22=PB12
 Mcu.Pin23=PB13
-Mcu.Pin24=PB14
-Mcu.Pin25=PB15
-Mcu.Pin26=PC6
-Mcu.Pin27=PC7
-Mcu.Pin28=PC8
-Mcu.Pin29=PC9
+Mcu.Pin24=PD12
+Mcu.Pin25=PD13
+Mcu.Pin26=PD14
+Mcu.Pin27=PD15
+Mcu.Pin28=PC6
+Mcu.Pin29=PC7
 Mcu.Pin3=PC0
-Mcu.Pin30=PA9
-Mcu.Pin31=PA10
-Mcu.Pin32=PA11
-Mcu.Pin33=PA12
-Mcu.Pin34=PA13
-Mcu.Pin35=PA14
-Mcu.Pin36=PA15
-Mcu.Pin37=PC10
-Mcu.Pin38=PC11
-Mcu.Pin39=PC12
+Mcu.Pin30=PC8
+Mcu.Pin31=PC9
+Mcu.Pin32=PA9
+Mcu.Pin33=PA10
+Mcu.Pin34=PA11
+Mcu.Pin35=PA12
+Mcu.Pin36=PA13
+Mcu.Pin37=PA14
+Mcu.Pin38=PA15
+Mcu.Pin39=PC10
 Mcu.Pin4=PC1
-Mcu.Pin40=PD0
-Mcu.Pin41=PD1
-Mcu.Pin42=PD3
-Mcu.Pin43=PD4
-Mcu.Pin44=PD5
-Mcu.Pin45=PD6
-Mcu.Pin46=PB3
-Mcu.Pin47=PB4
-Mcu.Pin48=PB8
-Mcu.Pin49=PB9
+Mcu.Pin40=PC11
+Mcu.Pin41=PC12
+Mcu.Pin42=PD0
+Mcu.Pin43=PD3
+Mcu.Pin44=PD4
+Mcu.Pin45=PD5
+Mcu.Pin46=PD6
+Mcu.Pin47=PB3
+Mcu.Pin48=PB4
+Mcu.Pin49=PB8
 Mcu.Pin5=PC2
+Mcu.Pin50=PB9
 Mcu.Pin6=PC3
 Mcu.Pin7=PA0-WKUP
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=50
+Mcu.PinsNb=51
 PA0-WKUP.Mode=IN0
 PA0-WKUP.Signal=ADC2_IN0
 PA1.Mode=RMII
@@ -102,18 +102,13 @@ PB0.Mode=IN8
 PB0.Signal=ADC2_IN8
 PB1.Mode=IN9
 PB1.Signal=ADC2_IN9
-PB10.Mode=Full-Duplex-Master
-PB10.Signal=SPI2_SCK
+PB10.Signal=GPIO_Output
 PB11.Mode=RMII
 PB11.Signal=ETH_RMII_TX_EN
 PB12.Mode=RMII
 PB12.Signal=ETH_RMII_TXD0
 PB13.Mode=RMII
 PB13.Signal=ETH_RMII_TXD1
-PB14.Mode=Full-Duplex-Master
-PB14.Signal=SPI2_MISO
-PB15.Mode=Full-Duplex-Master
-PB15.Signal=SPI2_MOSI
 PB2.Signal=GPIO_Input
 PB3.Mode=JTAG(5-pin)
 PB3.Signal=SYS_JTDO-SWO
@@ -154,7 +149,10 @@ PC8.Signal=TIM3_CH3
 PC9.Mode=One-Pulse-Generation
 PC9.Signal=TIM3_CH4
 PD0.Signal=GPIO_Output
-PD1.Signal=GPIO_Output
+PD12.Signal=GPIO_Output
+PD13.Signal=GPIO_Output
+PD14.Signal=GPIO_Output
+PD15.Signal=GPIO_Output
 PD3.Mode=Hardware-flow-control
 PD3.Signal=USART2_CTS
 PD4.Mode=Hardware-flow-control
