Intermediate update: PCB routing/schematic tweaking in process..

--- a/microxplorer/loranc_rcvr_lqfp100.ioc
+++ b/microxplorer/loranc_rcvr_lqfp100.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-#Mon Jan 20 19:45:05 EET 2014
+#Thu Jan 30 18:52:20 EET 2014
 File.Version=1
 KeepUserPlacement=true
 Mcu.Family=STM32F4
@@ -18,58 +18,47 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PA3
-Mcu.Pin11=PA4
-Mcu.Pin12=PA5
-Mcu.Pin13=PA6
-Mcu.Pin14=PA7
-Mcu.Pin15=PC4
-Mcu.Pin16=PC5
-Mcu.Pin17=PB0
-Mcu.Pin18=PB1
-Mcu.Pin19=PB2
+Mcu.Pin10=PA7
+Mcu.Pin11=PC4
+Mcu.Pin12=PC5
+Mcu.Pin13=PB2
+Mcu.Pin14=PB10
+Mcu.Pin15=PB11
+Mcu.Pin16=PB12
+Mcu.Pin17=PB13
+Mcu.Pin18=PD12
+Mcu.Pin19=PD13
 Mcu.Pin2=PH0-OSC_IN
-Mcu.Pin20=PB10
-Mcu.Pin21=PB11
-Mcu.Pin22=PB12
-Mcu.Pin23=PB13
-Mcu.Pin24=PD12
-Mcu.Pin25=PD13
-Mcu.Pin26=PD14
-Mcu.Pin27=PD15
-Mcu.Pin28=PC6
-Mcu.Pin29=PC7
-Mcu.Pin3=PC0
-Mcu.Pin30=PC8
-Mcu.Pin31=PC9
-Mcu.Pin32=PA9
-Mcu.Pin33=PA10
-Mcu.Pin34=PA11
-Mcu.Pin35=PA12
-Mcu.Pin36=PA13
-Mcu.Pin37=PA14
-Mcu.Pin38=PA15
-Mcu.Pin39=PC10
-Mcu.Pin4=PC1
-Mcu.Pin40=PC11
-Mcu.Pin41=PC12
-Mcu.Pin42=PD0
-Mcu.Pin43=PD3
-Mcu.Pin44=PD4
-Mcu.Pin45=PD5
-Mcu.Pin46=PD6
-Mcu.Pin47=PB3
-Mcu.Pin48=PB4
-Mcu.Pin49=PB8
-Mcu.Pin5=PC2
-Mcu.Pin50=PB9
-Mcu.Pin6=PC3
-Mcu.Pin7=PA0-WKUP
-Mcu.Pin8=PA1
-Mcu.Pin9=PA2
-Mcu.PinsNb=51
-PA0-WKUP.Mode=IN0
-PA0-WKUP.Signal=ADC2_IN0
+Mcu.Pin20=PD14
+Mcu.Pin21=PD15
+Mcu.Pin22=PC6
+Mcu.Pin23=PC7
+Mcu.Pin24=PC8
+Mcu.Pin25=PC9
+Mcu.Pin26=PA9
+Mcu.Pin27=PA10
+Mcu.Pin28=PA11
+Mcu.Pin29=PA12
+Mcu.Pin3=PC1
+Mcu.Pin30=PA13
+Mcu.Pin31=PA14
+Mcu.Pin32=PC10
+Mcu.Pin33=PC11
+Mcu.Pin34=PC12
+Mcu.Pin35=PD0
+Mcu.Pin36=PD3
+Mcu.Pin37=PD4
+Mcu.Pin38=PD5
+Mcu.Pin39=PD6
+Mcu.Pin4=PC2
+Mcu.Pin40=PB8
+Mcu.Pin41=PB9
+Mcu.Pin5=PC3
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA4
+Mcu.Pin9=PA5
+Mcu.PinsNb=42
 PA1.Mode=RMII
 PA1.Signal=ETH_RMII_REF_CLK
 PA10.Mode=Hardware-flow-control
@@ -78,30 +67,20 @@ PA11.Mode=Hardware-flow-control
 PA11.Signal=USART1_CTS
 PA12.Mode=Hardware-flow-control
 PA12.Signal=USART1_RTS
-PA13.Mode=JTAG(5-pin)
+PA13.Mode=Serial-Wire
 PA13.Signal=SYS_JTMS-SWDIO
-PA14.Mode=JTAG(5-pin)
+PA14.Mode=Serial-Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA15.Mode=JTAG(5-pin)
-PA15.Signal=SYS_JTDI
 PA2.Mode=RMII
 PA2.Signal=ETH_RMII_MDIO
-PA3.Mode=IN3
-PA3.Signal=ADC2_IN3
 PA4.Mode=OUT1
 PA4.Signal=DAC_OUT1
 PA5.Mode=OUT2
 PA5.Signal=DAC_OUT2
-PA6.Mode=IN6
-PA6.Signal=ADC2_IN6
 PA7.Mode=RMII
 PA7.Signal=ETH_RMII_CRS_DV
 PA9.Mode=Hardware-flow-control
 PA9.Signal=USART1_TX
-PB0.Mode=IN8
-PB0.Signal=ADC2_IN8
-PB1.Mode=IN9
-PB1.Signal=ADC2_IN9
 PB10.Signal=GPIO_Output
 PB11.Mode=RMII
 PB11.Signal=ETH_RMII_TX_EN
@@ -110,16 +89,10 @@ PB12.Signal=ETH_RMII_TXD0
 PB13.Mode=RMII
 PB13.Signal=ETH_RMII_TXD1
 PB2.Signal=GPIO_Input
-PB3.Mode=JTAG(5-pin)
-PB3.Signal=SYS_JTDO-SWO
-PB4.Mode=JTAG(5-pin)
-PB4.Signal=SYS_JTRST
 PB8.Mode=Output-Compare
 PB8.Signal=TIM10_CH1
 PB9.Mode=Output-Compare
 PB9.Signal=TIM11_CH1
-PC0.Mode=IN10
-PC0.Signal=ADC2_IN10
 PC1.Mode=RMII
 PC1.Signal=ETH_RMII_MDC
 PC10.Mode=Full-Duplex-Master
