Intermediate update #2: PCB routing/schematic tweaking in process

--- a/microxplorer/loranc_rcvr_lqfp100.ioc
+++ b/microxplorer/loranc_rcvr_lqfp100.ioc
@@ -1,12 +1,12 @@
 #MicroXplorer Configuration settings - do not modify
-#Thu Jan 30 18:52:20 EET 2014
+#Mon Feb 03 23:32:02 EET 2014
 File.Version=1
 KeepUserPlacement=true
 Mcu.Family=STM32F4
 Mcu.IP0=ADC2
 Mcu.IP1=DAC
 Mcu.IP2=ETH_RMII
-Mcu.IP3=SPI3
+Mcu.IP3=SPI1
 Mcu.IP4=SYS
 Mcu.IP5=TIM3
 Mcu.IP6=TIM10
@@ -42,14 +42,14 @@ Mcu.Pin29=PA12
 Mcu.Pin3=PC1
 Mcu.Pin30=PA13
 Mcu.Pin31=PA14
-Mcu.Pin32=PC10
-Mcu.Pin33=PC11
-Mcu.Pin34=PC12
-Mcu.Pin35=PD0
-Mcu.Pin36=PD3
-Mcu.Pin37=PD4
-Mcu.Pin38=PD5
-Mcu.Pin39=PD6
+Mcu.Pin32=PD3
+Mcu.Pin33=PD4
+Mcu.Pin34=PD5
+Mcu.Pin35=PD6
+Mcu.Pin36=PB3
+Mcu.Pin37=PB4
+Mcu.Pin38=PB5
+Mcu.Pin39=PB6
 Mcu.Pin4=PC2
 Mcu.Pin40=PB8
 Mcu.Pin41=PB9
@@ -89,18 +89,19 @@ PB12.Signal=ETH_RMII_TXD0
 PB13.Mode=RMII
 PB13.Signal=ETH_RMII_TXD1
 PB2.Signal=GPIO_Input
+PB3.Mode=Full-Duplex-Master
+PB3.Signal=SPI1_SCK
+PB4.Mode=Full-Duplex-Master
+PB4.Signal=SPI1_MISO
+PB5.Mode=Full-Duplex-Master
+PB5.Signal=SPI1_MOSI
+PB6.Signal=GPIO_Output
 PB8.Mode=Output-Compare
 PB8.Signal=TIM10_CH1
 PB9.Mode=Output-Compare
 PB9.Signal=TIM11_CH1
 PC1.Mode=RMII
 PC1.Signal=ETH_RMII_MDC
-PC10.Mode=Full-Duplex-Master
-PC10.Signal=SPI3_SCK
-PC11.Mode=Full-Duplex-Master
-PC11.Signal=SPI3_MISO
-PC12.Mode=Full-Duplex-Master
-PC12.Signal=SPI3_MOSI
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=SYS_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -121,7 +122,6 @@ PC8.Mode=One-Pulse-Generation
 PC8.Signal=TIM3_CH3
 PC9.Mode=One-Pulse-Generation
 PC9.Signal=TIM3_CH4
-PD0.Signal=GPIO_Output
 PD12.Signal=GPIO_Output
 PD13.Signal=GPIO_Output
 PD14.Signal=GPIO_Output
