--- a/microxplorer/loranc_rcvr_lqfp100.ioc
+++ b/microxplorer/loranc_rcvr_lqfp100.ioc
@@ -1,16 +1,16 @@
 #MicroXplorer Configuration settings - do not modify
-#Mon Feb 03 23:32:02 EET 2014
+#Thu Feb 13 01:10:11 EET 2014
 File.Version=1
 KeepUserPlacement=true
 Mcu.Family=STM32F4
-Mcu.IP0=ADC2
-Mcu.IP1=DAC
-Mcu.IP2=ETH_RMII
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IP5=TIM3
-Mcu.IP6=TIM10
-Mcu.IP7=TIM11
+Mcu.IP0=ADC1
+Mcu.IP1=ADC2
+Mcu.IP2=ADC3
+Mcu.IP3=DAC
+Mcu.IP4=ETH_RMII
+Mcu.IP5=SPI1
+Mcu.IP6=SYS
+Mcu.IP7=TIM4
 Mcu.IP8=USART1
 Mcu.IP9=USART2
 Mcu.IPNb=10
@@ -18,47 +18,42 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PA7
-Mcu.Pin11=PC4
-Mcu.Pin12=PC5
-Mcu.Pin13=PB2
-Mcu.Pin14=PB10
-Mcu.Pin15=PB11
-Mcu.Pin16=PB12
-Mcu.Pin17=PB13
-Mcu.Pin18=PD12
-Mcu.Pin19=PD13
+Mcu.Pin10=PA5
+Mcu.Pin11=PA7
+Mcu.Pin12=PC4
+Mcu.Pin13=PC5
+Mcu.Pin14=PB2
+Mcu.Pin15=PB10
+Mcu.Pin16=PB11
+Mcu.Pin17=PB12
+Mcu.Pin18=PB13
+Mcu.Pin19=PC8
 Mcu.Pin2=PH0-OSC_IN
-Mcu.Pin20=PD14
-Mcu.Pin21=PD15
-Mcu.Pin22=PC6
-Mcu.Pin23=PC7
-Mcu.Pin24=PC8
-Mcu.Pin25=PC9
-Mcu.Pin26=PA9
-Mcu.Pin27=PA10
-Mcu.Pin28=PA11
-Mcu.Pin29=PA12
-Mcu.Pin3=PC1
-Mcu.Pin30=PA13
-Mcu.Pin31=PA14
-Mcu.Pin32=PD3
-Mcu.Pin33=PD4
-Mcu.Pin34=PD5
-Mcu.Pin35=PD6
-Mcu.Pin36=PB3
-Mcu.Pin37=PB4
-Mcu.Pin38=PB5
-Mcu.Pin39=PB6
-Mcu.Pin4=PC2
-Mcu.Pin40=PB8
-Mcu.Pin41=PB9
-Mcu.Pin5=PC3
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA4
-Mcu.Pin9=PA5
-Mcu.PinsNb=42
+Mcu.Pin20=PC9
+Mcu.Pin21=PA9
+Mcu.Pin22=PA10
+Mcu.Pin23=PA11
+Mcu.Pin24=PA12
+Mcu.Pin25=PA13
+Mcu.Pin26=PA14
+Mcu.Pin27=PD3
+Mcu.Pin28=PD4
+Mcu.Pin29=PD5
+Mcu.Pin3=PC0
+Mcu.Pin30=PD6
+Mcu.Pin31=PB3
+Mcu.Pin32=PB4
+Mcu.Pin33=PB5
+Mcu.Pin34=PB6
+Mcu.Pin35=PB7
+Mcu.Pin36=PB8
+Mcu.Pin4=PC1
+Mcu.Pin5=PC2
+Mcu.Pin6=PC3
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA4
+Mcu.PinsNb=37
 PA1.Mode=RMII
 PA1.Signal=ETH_RMII_REF_CLK
 PA10.Mode=Hardware-flow-control
@@ -96,10 +91,11 @@ PB4.Signal=SPI1_MISO
 PB5.Mode=Full-Duplex-Master
 PB5.Signal=SPI1_MOSI
 PB6.Signal=GPIO_Output
-PB8.Mode=Output-Compare
-PB8.Signal=TIM10_CH1
-PB9.Mode=Output-Compare
-PB9.Signal=TIM11_CH1
+PB7.Mode=PWM-Input-2
+PB7.Signal=TIM4_CH2
+PB8.Signal=TIM4_CH3
+PC0.Mode=IN10
+PC0.Signal=ADC1_IN10
 PC1.Mode=RMII
 PC1.Signal=ETH_RMII_MDC
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
@@ -109,23 +105,13 @@ PC15-OSC32_OUT.Signal=SYS_OSC32_OUT
 PC2.Mode=IN12
 PC2.Signal=ADC2_IN12
 PC3.Mode=IN13
-PC3.Signal=ADC2_IN13
+PC3.Signal=ADC3_IN13
 PC4.Mode=RMII
 PC4.Signal=ETH_RMII_RXD0
 PC5.Mode=RMII
 PC5.Signal=ETH_RMII_RXD1
-PC6.Mode=One-Pulse-Generation
-PC6.Signal=TIM3_CH1
-PC7.Mode=One-Pulse-Generation
-PC7.Signal=TIM3_CH2
-PC8.Mode=One-Pulse-Generation
 PC8.Signal=TIM3_CH3
-PC9.Mode=One-Pulse-Generation
 PC9.Signal=TIM3_CH4
-PD12.Signal=GPIO_Output
-PD13.Signal=GPIO_Output
-PD14.Signal=GPIO_Output
-PD15.Signal=GPIO_Output
 PD3.Mode=Hardware-flow-control
 PD3.Signal=USART2_CTS
 PD4.Mode=Hardware-flow-control
