--- a/hardware/proc_board/microxplorer/loranc_rcvr_lqfp100.ioc
+++ b/hardware/proc_board/microxplorer/loranc_rcvr_lqfp100.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-#Thu Feb 13 01:10:11 EET 2014
+#Sat Apr 19 13:52:03 EEST 2014
 File.Version=1
 KeepUserPlacement=true
 Mcu.Family=STM32F4
@@ -23,37 +23,41 @@ Mcu.Pin11=PA7
 Mcu.Pin12=PC4
 Mcu.Pin13=PC5
 Mcu.Pin14=PB2
-Mcu.Pin15=PB10
-Mcu.Pin16=PB11
-Mcu.Pin17=PB12
-Mcu.Pin18=PB13
-Mcu.Pin19=PC8
+Mcu.Pin15=PE10
+Mcu.Pin16=PE11
+Mcu.Pin17=PE12
+Mcu.Pin18=PE13
+Mcu.Pin19=PB10
 Mcu.Pin2=PH0-OSC_IN
-Mcu.Pin20=PC9
-Mcu.Pin21=PA9
-Mcu.Pin22=PA10
-Mcu.Pin23=PA11
-Mcu.Pin24=PA12
-Mcu.Pin25=PA13
-Mcu.Pin26=PA14
-Mcu.Pin27=PD3
-Mcu.Pin28=PD4
-Mcu.Pin29=PD5
+Mcu.Pin20=PB11
+Mcu.Pin21=PB12
+Mcu.Pin22=PB13
+Mcu.Pin23=PC8
+Mcu.Pin24=PC9
+Mcu.Pin25=PA9
+Mcu.Pin26=PA10
+Mcu.Pin27=PA11
+Mcu.Pin28=PA12
+Mcu.Pin29=PA13
 Mcu.Pin3=PC0
-Mcu.Pin30=PD6
-Mcu.Pin31=PB3
-Mcu.Pin32=PB4
-Mcu.Pin33=PB5
-Mcu.Pin34=PB6
-Mcu.Pin35=PB7
-Mcu.Pin36=PB8
+Mcu.Pin30=PA14
+Mcu.Pin31=PD3
+Mcu.Pin32=PD4
+Mcu.Pin33=PD5
+Mcu.Pin34=PD6
+Mcu.Pin35=PB3
+Mcu.Pin36=PB4
+Mcu.Pin37=PB5
+Mcu.Pin38=PB6
+Mcu.Pin39=PB7
 Mcu.Pin4=PC1
+Mcu.Pin40=PB8
 Mcu.Pin5=PC2
 Mcu.Pin6=PC3
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA4
-Mcu.PinsNb=37
+Mcu.PinsNb=41
 PA1.Mode=RMII
 PA1.Signal=ETH_RMII_REF_CLK
 PA10.Mode=Hardware-flow-control
@@ -120,5 +124,9 @@ PD5.Mode=Hardware-flow-control
 PD5.Signal=USART2_TX
 PD6.Mode=Hardware-flow-control
 PD6.Signal=USART2_RX
+PE10.Signal=GPIO_Output
+PE11.Signal=GPIO_Output
+PE12.Signal=GPIO_Input
+PE13.Signal=GPIO_Input
 PH0-OSC_IN.Mode=HSE-External-Clock-Source
 PH0-OSC_IN.Signal=SYS_OSC_IN
